--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
     "name": "Olingo docs",
     "image": "mcr.microsoft.com/devcontainers/typescript-node:22",
-    "postCreateCommand": "npm install"
+    "postCreateCommand": "pnpm install"
 }
