--- a/package.json
+++ b/package.json
@@ -11,13 +11,21 @@
   },
   "dependencies": {
     "@astrojs/node": "^9.1.3",
+    "@astrojs/react": "^4.2.1",
     "@astrojs/starlight": "^0.32.2",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "astro": "^5.1.5",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "sharp": "^0.32.5"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
       "sharp"
     ]
+  },
+  "devDependencies": {
+    "likec4": "^1.26.1"
   }
 }
